--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>b0ece5a9-9105-463f-a750-04fdb531fa74</groupId>
-	<artifactId>max-github-ations</artifactId>
-	<version>1.0.0</version>
+	<artifactId>maxhub</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>max-github-actions</name>
+	<name>${project.artifactId}</name>
 
-	<description>mule max hello</description>
+	<description>RTF Hello world Mule App</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
