--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,6 @@ jobs:
       
       - uses: actions/upload-artifact@v3
         with:
-          name: Mule App JAR
+          name: ${GITHUB_REPOSITORY#*/}-${GITHUB_SHA:0:7}
           path: staging
 
