--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  REPO_NAME: ${{ github.event.repository.name }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -47,6 +50,6 @@ jobs:
       
       - uses: actions/upload-artifact@v3
         with:
-          name: ${GITHUB_REPOSITORY#*/}
+          name: $REPO_NAME
           path: staging
 
