--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      
+      - name: Anypoint Platform creds
+        with:
+          credentials:
+            ${{ secrets.ANYPOINT_USERNAME }}
+            ${{ secrets.ANYPOINT_PASSWORD }}
+        env:
+          credentials:
+            ${{ secrets.ANYPOINT_USERNAME }}
+            ${{ secrets.ANYPOINT_PASSWORD }}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       
