--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Mule App CI
+name: Mule App Build
 
 # Controls when the workflow will run
 on:
@@ -19,18 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
-    steps:
-      - name: Anypoint Platform creds
-        with:
-          credentials:
-            ${{ secrets.ANYPOINT_USERNAME }}
-            ${{ secrets.ANYPOINT_PASSWORD }}
-        env:
-          credentials:
-            ${{ secrets.ANYPOINT_USERNAME }}
-            ${{ secrets.ANYPOINT_PASSWORD }}
-
+  
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
   
@@ -65,4 +54,3 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}
           path: staging
-
