--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,18 @@ jobs:
           server-id: github
       - uses: s4u/maven-settings-action@v2.7.0
         with:
-          anypoint-exchange-v3: '[{"id": "anypoint-exchange-v3", "username": "${{ secrets.ANYPOINT_USERNAME }}", "password": "${{ secrets.ANYPOINT_PASSWORD }}"}]'
-          Repository: '[{"id": "Repository", "username": "${{ secrets.ANYPOINT_USERNAME }}", "password": "${{ secrets.ANYPOINT_PASSWORD }}"}]'
-
+          servers: |
+            [{
+              "id": "Repository",
+              "username": "${{ secrets.ANYPOINT_USERNAME }}",
+              "password": "${{ secrets.ANYPOINT_PASSWORD }}"
+              },
+              {
+                "id": "anypoint-exchange-v3",
+                "username": "${{ secrets.ANYPOINT_USERNAME }}",
+                "password": "${{ secrets.ANYPOINT_PASSWORD }}"
+              }]
+          
       - name: JOB settings DETAILS
         run: |
           cat /home/runner/.m2/settings.xml
