--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,3 +63,5 @@ jobs:
         with:
           name: ${{ github.event.repository.name }}
           path: staging
+          
+      - run: mvn deploy
