--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Mule App Build
+name: Mule CICD
 
 # Controls when the workflow will run
 on:
@@ -64,4 +64,11 @@ jobs:
           name: ${{ github.event.repository.name }}
           path: staging
           
-      - run: mvn deploy
+      - run: mvn --batch-mode deploy
+      
+      - shell: bash
+        env:
+          ANYPOINT_USERNAME: ${{ secrets.ANYPOINT_USERNAME }}
+          ANYPOINT_PASSWORD: ${{ secrets.ANYPOINT_PASSWORD }}
+        run: |
+          mvn deploy -DmuleDeploy -Dusername="$env:ANYPOINT_USERNAME" -Dpassword="$env:ANYPOINT_PASSWORD" -Dname=maxhub -Denvironment=Production -Dprovider=MC -Druntime.fabric.application.name=maxhub -DreplicationFactor=2 -Dtarget=rtf-appliance-rhel
